test/analyze/type_check/variable_declaration/toplevel_with_pattern.myte
module test

// Error
val (a, b): (Int, Bool) = (1, true)

val c as d: Int = 1

val _: Int = 1

// Succeed
val e: Int = 1


fun main() {}